--- a/.github/actions/expo-build/action.yml
+++ b/.github/actions/expo-build/action.yml
@@ -1,3 +1,71 @@
+name: 'Check and Start Build'
+description: 'Check for existing builds or start a new one if needed'
+
+inputs:
+  project:
+    required: true
+    type: string
+  profile:
+    required: true
+    type: string
+  runtime-version:
+    required: true
+    type: string
+  platforms:
+    required: false
+    type: string
+    default: 'android ios'
+
+outputs:
+  android-build-id:
+    description: 'Android build ID for tracking the build.'
+    value: ${{ steps.check-builds.outputs.android-build-id }}
+  android-build-link:
+    description: 'Link to the Android build.'
+    value: ${{ steps.check-builds.outputs.android-build-link }}
+  android-distribution:
+    description: 'Distribution channel for the Android build.'
+    value: ${{ steps.check-builds.outputs.android-distribution }}
+  android-build-profile:
+    description: 'Build profile used for Android.'
+    value: ${{ steps.check-builds.outputs.android-build-profile }}
+  android-runtime-version:
+    description: 'Runtime version for Android build.'
+    value: ${{ steps.check-builds.outputs.android-runtime-version }}
+  android-app-version:
+    description: 'App version for Android.'
+    value: ${{ steps.check-builds.outputs.android-app-version }}
+  android-git-commit:
+    description: 'Git commit hash for the Android build.'
+    value: ${{ steps.check-builds.outputs.android-git-commit }}
+  ios-build-id:
+    description: 'iOS build ID for tracking the build.'
+    value: ${{ steps.check-builds.outputs.ios-build-id }}
+  ios-build-link:
+    description: 'Link to the iOS build.'
+    value: ${{ steps.check-builds.outputs.ios-build-link }}
+  ios-distribution:
+    description: 'Distribution channel for the iOS build.'
+    value: ${{ steps.check-builds.outputs.ios-distribution }}
+  ios-build-profile:
+    description: 'Build profile used for iOS.'
+    value: ${{ steps.check-builds.outputs.ios-build-profile }}
+  ios-runtime-version:
+    description: 'Runtime version for iOS build.'
+    value: ${{ steps.check-builds.outputs.ios-runtime-version }}
+  ios-app-version:
+    description: 'App version for iOS.'
+    value: ${{ steps.check-builds.outputs.ios-app-version }}
+  ios-git-commit:
+    description: 'Git commit hash for the iOS build.'
+    value: ${{ steps.check-builds.outputs.ios-git-commit }}
+  slug:
+    description: 'Project slug for Expo tracking.'
+    value: ${{ steps.check-builds.outputs.slug }}
+  project-id:
+    description: 'Project ID for tracking purposes.'
+    value: ${{ steps.check-builds.outputs.project-id }}
+
 runs:
   using: 'composite'
   steps:
@@ -5,144 +73,102 @@ runs:
       id: check-builds
       shell: bash
       run: |
-        set -euo pipefail
-
-        # Parse platforms into an array safely
-        IFS=' ' read -r -a platforms <<< "${{ inputs.platforms }}"
+        # Convert platforms input into an array
+        platforms=(${{ inputs.platforms }})
         slugs=()
         project_ids=()
 
-        # --- Helpers ---
-        # Extract *all* JSON arrays from noisy output, one per line
-        extract_all_arrays() {
-          perl -0777 -ne '
-            while (/\[ (?: [^\[\]] | (?R) )* \]/gsx) {
-              print "$&\n";
-            }
-          '
-        }
-
-        # Return the first candidate array whose first element is an object
-        pick_objects_array() {
-          while IFS= read -r arr; do
-            # validate json
-            echo "$arr" | jq empty >/dev/null 2>&1 || continue
-            # must be array, non-empty, first element is object
-            if echo "$arr" | jq -e 'type=="array" and length>0 and (.[0]|type)=="object"' >/dev/null; then
-              echo "$arr"
-              return 0
-            fi
-          done
-          return 1
-        }
-
-        # Normalize a possibly double-encoded array (string -> fromjson)
-        normalize_array_json() {
-          local candidate="$1"
-          echo "$candidate" | jq 'if type=="string" then fromjson else . end'
-        }
-
         for platform in "${platforms[@]}"; do
           echo "=== Checking builds for platform: $platform ==="
-
-          # 1) Query existing builds
+          # Run the build-list command to check for existing builds
           build_output=$(yarn nx run ${{ inputs.project }}:build-list \
             --platform "$platform" \
             --buildProfile "${{ inputs.profile }}" \
             --runtimeVersion "${{ inputs.runtime-version }}" \
-            --limit 1 \
-            --json \
-            --interactive false 2>&1) || true
+            --limit 1 --json --interactive false 2>/dev/null)
 
-          # Try to find the correct array among all arrays in the output
-          candidate=$(printf '%s' "$build_output" | extract_all_arrays | pick_objects_array || echo '')
-          if [ -z "$candidate" ]; then
-            # Fallback: maybe the entire output is just the array or a stringified array
-            candidate="$build_output"
-          fi
+          # Extract only the JSON portion (from the first "[" to the last "]").
+          cleaned_output=$(echo "$build_output" | sed ':a;N;$!ba;s/.*\(\[[^]]*\]\).*/\1/')
 
-          # Validate + normalize (handles double-encoded)
-          if ! echo "$candidate" | jq empty >/dev/null 2>&1; then
-            echo "Error: Received invalid JSON from build-list for $platform"
-            echo "Raw (visible):"; echo "$build_output" | cat -v
-            echo "Candidate:"; echo "$candidate"
+          # Use jq empty to validate the JSON. If it fails, the JSON is invalid.
+          if ! echo "$cleaned_output" | jq empty >/dev/null 2>&1; then
+            echo "Error: Received invalid JSON from build-list command for platform: $platform"
+            echo "Raw output was:"
+            echo "$build_output" | cat -v
+            echo "Cleaned output was:"
+            echo "$cleaned_output"
             exit 1
           fi
-          normalized=$(normalize_array_json "$candidate")
 
-          # 2) If no builds, start a new one
-          if [[ "$(echo "$normalized" | jq 'length')" -eq 0 ]]; then
+          # If no builds are found, trigger a new build.
+          if [[ "$(echo "$cleaned_output" | jq length)" -eq 0 ]]; then
             echo "No existing $platform build found for runtime version ${{ inputs.runtime-version }}. Starting a new build."
             build_output=$(yarn nx run ${{ inputs.project }}:build \
               --profile "${{ inputs.profile }}" \
               --platform "$platform" \
               --freeze-credentials \
-              --interactive false --wait false --json 2>&1) || {
-                echo "Error: build command failed for $platform"
-                echo "$build_output"
-                exit 1
-              }
+              --interactive false --wait false --json 2>/dev/null)
 
-            candidate=$(printf '%s' "$build_output" | extract_all_arrays | pick_objects_array || echo '')
-            if [ -z "$candidate" ]; then
-              candidate="$build_output"
-            fi
-
-            if ! echo "$candidate" | jq empty >/dev/null 2>&1; then
-              echo "Error: Invalid JSON from build command for $platform"
-              echo "Candidate:"; echo "$candidate"
+            # Extract JSON from the new build command output.
+            cleaned_output=$(echo "$build_output" | sed -n '/^\[/,/\]$/p')
+            if [ -z "$cleaned_output" ]; then
+              echo "Error: Could not extract JSON from build command for platform: $platform"
+              echo "Full output was:"
+              echo "$build_output"
               exit 1
             fi
-            normalized=$(normalize_array_json "$candidate")
+
+            if ! echo "$cleaned_output" | jq empty >/dev/null 2>&1; then
+              echo "Error: Received invalid JSON from the build command for platform: $platform"
+              echo "Cleaned output was:"
+              echo "$cleaned_output"
+              exit 1
+            fi
           else
             echo "$platform build found for runtime version ${{ inputs.runtime-version }}."
           fi
-
-          # 3) Ensure first element is an object (if present)
-          first_type=$(echo "$normalized" | jq -r '.[0] | type? // "null"')
-          if [[ "$first_type" != "object" ]]; then
-            echo "Error: Expected array of objects; got array of '$first_type' for $platform"
-            echo "$normalized" | jq .
-            exit 1
-          fi
-
-          # 4) Extract fields
-          slug=$(echo "$normalized" | jq -r '.[0].project.slug')
-          project_id=$(echo "$normalized" | jq -r '.[0].project.id')
-          build_id=$(echo "$normalized" | jq -r '.[0].id')
-          distribution=$(echo "$normalized" | jq -r '.[0].distribution')
-          build_profile=$(echo "$normalized" | jq -r '.[0].buildProfile')
-          runtime_version_from_build=$(echo "$normalized" | jq -r '.[0].runtimeVersion')
-          app_version=$(echo "$normalized" | jq -r '.[0].appVersion')
-          git_commit=$(echo "$normalized" | jq -r '.[0].gitCommitHash')
-
+          echo $cleaned_output
+          # Extract values using jq from the cleaned JSON
+          slug=$(echo "$cleaned_output" | jq -r '.[0].project.slug')
+          project_id=$(echo "$cleaned_output" | jq -r '.[0].project.id')
+          build_id=$(echo "$cleaned_output" | jq -r '.[0].id')
+          distribution=$(echo "$cleaned_output" | jq -r '.[0].distribution')
+          build_profile=$(echo "$cleaned_output" | jq -r '.[0].buildProfile')
+          runtime_version_from_build=$(echo "$cleaned_output" | jq -r '.[0].runtimeVersion')
+          app_version=$(echo "$cleaned_output" | jq -r '.[0].appVersion')
+          git_commit=$(echo "$cleaned_output" | jq -r '.[0].gitCommitHash')
           build_link="https://expo.dev/accounts/better-angels/projects/${slug}/builds/${build_id}"
 
-          {
-            echo "${platform}-build-id=${build_id}"
-            echo "${platform}-build-link=${build_link}"
-            echo "${platform}-distribution=${distribution}"
-            echo "${platform}-build-profile=${build_profile}"
-            echo "${platform}-runtime-version=${runtime_version_from_build}"
-            echo "${platform}-app-version=${app_version}"
-            echo "${platform}-git-commit=${git_commit}"
-          } >> "$GITHUB_OUTPUT"
+          # Set outputs for the current platform
+          echo "${platform}-build-id=$build_id" >> $GITHUB_OUTPUT
+          echo "${platform}-build-link=$build_link" >> $GITHUB_OUTPUT
+          echo "${platform}-distribution=$distribution" >> $GITHUB_OUTPUT
+          echo "${platform}-build-profile=$build_profile" >> $GITHUB_OUTPUT
+          echo "${platform}-runtime-version=$runtime_version_from_build" >> $GITHUB_OUTPUT
+          echo "${platform}-app-version=$app_version" >> $GITHUB_OUTPUT
+          echo "${platform}-git-commit=$git_commit" >> $GITHUB_OUTPUT
 
+          # Store slug and project_id for consistency checks
           slugs+=("$slug")
           project_ids+=("$project_id")
         done
 
-        # Cross-platform consistency
-        unique_slugs=($(printf '%s\n' "${slugs[@]}" | sort -u))
-        unique_project_ids=($(printf '%s\n' "${project_ids[@]}" | sort -u))
-        if [ ${#unique_slugs[@]} -ne 1 ]; then
-          echo "Error: Different slugs found for platforms: ${slugs[*]}"; exit 1; fi
-        if [ ${#unique_project_ids[@]} -ne 1 ]; then
-          echo "Error: Different project IDs found for platforms: ${project_ids[*]}"; exit 1; fi
+        # Ensure slugs and project IDs are consistent across platforms
+        unique_slugs=($(echo "${slugs[@]}" | tr ' ' '\n' | sort -u | tr '\n' ' '))
+        unique_project_ids=($(echo "${project_ids[@]}" | tr ' ' '\n' | sort -u | tr '\n' ' '))
 
-        commit_message=$(git log -1 --pretty=format:"%s" HEAD || echo "")
-        {
-          echo "commit-message=${commit_message}"
-          echo "slug=${unique_slugs[0]}"
-          echo "project-id=${unique_project_ids[0]}"
-        } >> "$GITHUB_OUTPUT"
+        if [ ${#unique_slugs[@]} -ne 1 ]; then
+          echo "Error: Different slugs found for platforms: ${slugs[*]}"
+          exit 1
+        fi
+
+        if [ ${#unique_project_ids[@]} -ne 1 ]; then
+          echo "Error: Different project IDs found for platforms: ${project_ids[*]}"
+          exit 1
+        fi
+
+        # Set common outputs
+        commit_message=$(git log -1 --pretty=format:"%s" HEAD)
+        echo "commit-message=${commit_message}" >> $GITHUB_OUTPUT
+        echo "slug=${unique_slugs[0]}" >> $GITHUB_OUTPUT
+        echo "project-id=${unique_project_ids[0]}" >> $GITHUB_OUTPUT
